#62 implemented route /faiss/getNN/multiple/k for calculating nearest neighbours of multiple or all images
